Fix header alignment

--- a/wp-content/themes/academyAfrica/assets/css/src/components/_header.scss
+++ b/wp-content/themes/academyAfrica/assets/css/src/components/_header.scss
@@ -153,6 +153,13 @@
                                 justify-content: space-between;
                                 align-items: center;
                                 gap: 6px;
+
+                                .icons {
+                                    display: flex;
+                                    .icon {
+                                        margin: 0;
+                                    }
+                                }
                             }
 
                             .children {
